[metadata]
name = pulse-bt-profile-toggle
author = Pavlo Shchelokovskyy
author-email = shchelokovskyy@gmail.com
summary = Script to toggle Bluetooth audio profile via Pulse audio
description-file =
    README.rst
home-page = https://github.com/pshchelo/pulse-bt-profile-toggle
classifier =
    Development Status :: 1 - Alpha
    Environment :: Desktop
    Intended Audience :: Desktop users
    License :: OSI Approved :: MIT Software License
    Operating System :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10


[options]
python-requires = >= 3.6
setup_requires =
    pbr
install_requires =
    jeepney>=0.7
    pulsectl

[files]
packages =
    pulse_bt_profile_toggle

[entry_points]
console_scripts =
    pulse-bt-profile-toggle = pulse_bt_profile_toggle.bttoggle:toggle
